--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
-h1 {
-	color: blue;
+body{
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+}
+
+div {
+	border: 2px solid black;
+	padding: 2px;
+	width: 50%;
 }
