--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
 	display: flex;
-	justify-content: center;
-	text-align: center;
+	flex-direction: column;
+	align-items: center;
 	font-family: 'Lato', sans-serif;
 }
 
@@ -10,4 +10,8 @@ div {
 	padding: 2px;
 	width: 50%;
 	height: auto;
+}
+
+div > img {
+	width: 100%;
 }
