--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,11 @@ div {
 div > img {
 	width: 100%;
 }
+
+.is-invisible {
+  opacity: 0;
+}
+
+.subscription-details {
+  transition: opacity 1s;
+}
