--- a/push-messages/css/styles.css
+++ b/push-messages/css/styles.css
@@ -5,6 +5,11 @@ body{
 	font-family: 'Lato', sans-serif;
 }
 
+div {
+	padding-left: 25%;
+	padding-right: 25%;
+}
+
 .is-invisible {
   opacity: 0;
 }
