--- a/push-messages/css/styles.css
+++ b/push-messages/css/styles.css
@@ -5,9 +5,14 @@ body{
 	font-family: 'Lato', sans-serif;
 }
 
-div {
-	padding-left: 25%;
-	padding-right: 25%;
+pre {
+  white-space: pre-wrap;
+  background-color: #EEEEEE;
+  padding: 16px;
+}
+
+pre code {
+  word-break: break-word;
 }
 
 .is-invisible {
@@ -15,5 +20,6 @@ div {
 }
 
 .subscription-details {
+	padding: 0 20%;
   transition: opacity 1s;
 }
